AX: Incorrect range from index and length in text controls when there are newlines https://bugs.webkit.org/show_bug.cgi?id=167677 <rdar://problem/30300099>

Reviewed by Chris Fleizach.

Source/WebCore:

When there are newlines in text controls, the VisiblePosition that is created
from the index could be wrong. Because the index doesn't include the information
regarding a position's affinity. Fixed it by using CharacterOffset instead, since
it doesn't require that information.

Test: accessibility/mac/range-for-contenteditable-newline.html

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::traverseToOffsetInRange):
(WebCore::AXObjectCache::nextCharacterOffset):
(WebCore::AXObjectCache::characterOffsetForIndex):

LayoutTests:

* accessibility/mac/range-for-contenteditable-newline-expected.txt: Added.
* accessibility/mac/range-for-contenteditable-newline.html: Added.


Canonical link: https://commits.webkit.org/184729@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211491 268f45cc-cd09-0410-ab3c-d52691b4dbfc